Sección Hero modo Escritorio Finalizado

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
             <i class="fas fa-angle-up"></i>
         </div> -->
 
+        <!-- Start from the Navbar Section -->
         <nav class="navbar defaultMargin">
 
             <div class="brand__container">
@@ -50,8 +51,28 @@
             </div>
 
         </nav>
+        <!-- End from the Navbar Section -->
 
+        <!-- Start from the Hero Section -->
+        <section class="hero defaultMargin" id="home">
 
+            <div class="content">
+                <div class="title">
+                    <h1>Hello Guys!</h1>
+                    <h1>I'm Daniel.</h1>
+                </div>
+
+                <button>
+                    <i class="fas fa-coffee"></i> Get Started
+                </button>
+            </div>
+
+            <div class="image">
+                <img src="images/hero.jpg" alt="hero image">
+            </div>
+
+        </section>
+        <!-- End for the Hero Section -->
 
 
 
