Creando el spring right

--- a/index.html
+++ b/index.html
@@ -74,6 +74,11 @@
         </section>
         <!-- End for the Hero Section -->
 
+        <div class="spring right" id="spring1">
+            <div class="coil"></div>
+            <div class="bar gradient"></div>
+        </div>
+
 
 
         <script src="js/app.js"></script>
