Aplicando reglas de la clase spring

--- a/index.html
+++ b/index.html
@@ -75,7 +75,9 @@
         <!-- End for the Hero Section -->
 
         <div class="spring right" id="spring1">
-            <div class="coil"></div>
+            <div class="coil">
+                hola
+            </div>
             <div class="bar gradient"></div>
         </div>
 
